--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -6,7 +6,7 @@
 <p>{{ npm }}<p>
 
 <h5>Name:</h5>
-<p>{{ name }}</p>
+<p>{{ nama }}</p>
 
 <h5>Class:</h5>
 <p>{{ class }}</p>
@@ -40,4 +40,11 @@
 <a href="{% url 'main:create_mood_entry' %}">
   <button>Add New Mood Entry</button>
 </a>
+
+<a href="{% url 'main:logout' %}"></a>
+  <button>Logout</button>
+</a>
+
+<h5>Last login session: {{ last_login }}</h5>
+
 {% endblock content %}
